# movie-recommender-system-mlops

./: .dockerignore  .gitignore  Dockerfile  EDA_data_overview.ipynb  Makefile  README.md  check_data.py  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cd.yml  ci.yml  retrain.yml
configs/: api.yaml  config.yaml  data.yaml  evaluation.yaml  mlflow.yaml  model.yaml  monitoring.yaml  retraining.yaml
data/processed/: .gitignore  movies.parquet.dvc  movies_enriched.parquet.dvc  ratings.parquet.dvc  users.parquet.dvc
docs/: architecture_diagram  data_quality_report.md  milestones.md  problem_statement.md
k8s/: configmap.yaml  deployment.yaml  secret.example.yaml  service.yaml
models/: registry.json
notebooks/: 01_eda.ipynb  EDA.ipynb  Ingestion-Preprocessing.ipynb  SVD.ipynb
reports/baseline/: baseline_report.md
reports/evaluation/: .gitignore  evaluation_report.md  evaluation_summary 3.json  evaluation_summary.json  final_comparison 3.json  final_comparison 3.md  final_comparison.json  final_comparison.md
reports/monitoring/: monitoring_report.json  monitoring_report.md  request_logs.jsonl
reports/personalized/: .gitignore  content_based_train_report 3.md  train_knn_report.md  train_report.md
reports/preprocessing/: .gitignore  preprocess_report 2.md  preprocess_report.md
scripts/: generate_demo_monitoring_logs.py  prepare_smoke_artifacts.py  run_weekly_retrain.sh
src/data/: common.py  (+8 more)
tests/: test_api.py  test_bpr.py  test_common.py  test_load_data.py  test_monitoring.py  test_retrain_pipeline.py
(+39 files in other folders)
